# Stradus

./: .coverage  .gitignore  .pre-commit-config.yaml  Readme.md  StradusExample.py  example.py  pyproject.toml  u_get_usb_ports.py
.github/workflows/: test.yml
src/vortran/: ConnectionUsbReadWrite.py  __init__.py  laser.py  parser.py  u_get_usb_ports.py  usb.py  usb_connection.py
tests/: test_parser.py  test_usb.py
